# SebyD24R8O

./: .clangd  .cproject  .gitignore  .project  CMakeLists.txt  README.md  partitions.csv  sdkconfig  version.txt
hardware/: bom.txt
hardware/pcb/mainboard/1.1/: BOM_SEBYD24R8O_PW_1.1.csv
hardware/pcb/uiboard/1.0/: BOM_SEBYD24R8O_1.0_UI.csv
main/: CMakeLists.txt  busrtx.c  buzzer.c  channels.c  decoder.c  httpserver.c  idf_component.yml  main.c  otaupload.c  output.c  panelbuttons.c  setupcommand.c  utils.c
main/include/: busrtx.h  buzzer.h  channels.h  config.h  httpserver.h  otaupload.h  output.h  panelbuttons.h  utils.h
main/other/: frame.txt  sniff.txt
main/web/: config.html  otaupload.html
